cmake_minimum_required(VERSION 3.18)
include(CMakeDependentOption)

option(CMAKE_VERBOSE_MAKEFILE "Create verbose makefile" ON)
option(CUDA_VERBOSE_BUILD "Create verbose CUDA build" ON)
option(ENABLE_CUDA "Enable CUDA support" ON)

if(ENABLE_VCPKG_INTEGRATION AND DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
  message(STATUS "VCPKG found: $ENV{VCPKG_ROOT}")
  message(STATUS "Using VCPKG integration")
  set(USE_INTEGRATED_LIBS "FALSE" CACHE BOOL "Use libs distributed with this repo")
elseif(DEFINED CMAKE_TOOLCHAIN_FILE)
  message(STATUS "Using toolchain: ${CMAKE_TOOLCHAIN_FILE}")
  set(USE_INTEGRATED_LIBS "FALSE" CACHE BOOL "Use libs distributed with this repo")
elseif(WIN32)
  message(STATUS "vcpkg not found, toolchain not defined, using integrated libs on win32")
  set(USE_INTEGRATED_LIBS "TRUE" CACHE BOOL "Use libs distributed with this repo")
else()
  message(WARNING "vcpkg not found, toolchain not defined, system not win32 so build might fail")
  set(USE_INTEGRATED_LIBS "FALSE" CACHE BOOL "Use libs distributed with this repo")
endif()

project(GHActionsTests)

enable_language(C)
enable_language(CXX)

if(ENABLE_CUDA)
  find_package(CUDA)
  include(CheckLanguage)
  check_language(CUDA)
  if(NOT CMAKE_CUDA_COMPILER)
    message(STATUS "PATH: $ENV{PATH}")
    message(STATUS "CUDA_PATH: $ENV{CUDA_PATH}")
    message(STATUS "CUDA_TOOLKIT_ROOT_DIR: $ENV{CUDA_TOOLKIT_ROOT_DIR}")
    message(STATUS "CUDACXX: $ENV{CUDACXX}")
    message(FATAL_ERROR "CUDA not found, please build explicitly with -DENABLE_CUDA=OFF if you do not want CUDA.")
  else()
    enable_language(CUDA)
  endif()
endif()

add_executable(prova_cuda cuda_test.cpp)
